--- a/eda.ipynb
+++ b/eda.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os\n",
-    "from glob import glob"
+    "import glob\n"
    ]
   },
   {
@@ -37,19 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/javascript": "\n        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import pandas as pd'); }\n    ",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -115,14 +105,40 @@
        "</div>"
       ],
       "text/plain": [
-       "                                              userId  ...                               timestampHistory_new\n",
-       "0  f98d1132f60d46883ce49583257104d15ce723b3bbda21...  ...        1657146417045, 1657146605778, 1657146698738\n",
-       "1  2c1080975e257ed630e26679edbe4d5c850c65f3e09f65...  ...  1656684240278, 1656761266729, 1656761528085, 1...\n",
+       "                                              userId    userType  historySize  \\\n",
+       "0  f98d1132f60d46883ce49583257104d15ce723b3bbda21...  Non-Logged            3   \n",
+       "1  2c1080975e257ed630e26679edbe4d5c850c65f3e09f65...  Non-Logged           60   \n",
        "\n",
-       "[2 rows x 10 columns]"
+       "                                             history  \\\n",
+       "0  c8aab885-433d-4e46-8066-479f40ba7fb2, 68d2039c...   \n",
+       "1  3325b5a1-979a-4cb3-82b6-63905c9edbe8, fe856057...   \n",
+       "\n",
+       "                                    timestampHistory  \\\n",
+       "0        1657146417045, 1657146605778, 1657146698738   \n",
+       "1  1656684240278, 1656761266729, 1656761528085, 1...   \n",
+       "\n",
+       "                               numberOfClicksHistory  \\\n",
+       "0                                         76, 38, 41   \n",
+       "1  7, 80, 2, 1, 7, 62, 26, 44, 4, 4, 14, 45, 13, ...   \n",
+       "\n",
+       "                                   timeOnPageHistory  \\\n",
+       "0                                20380, 21184, 35438   \n",
+       "1  6049, 210489, 8672, 10000, 30000, 123007, 9965...   \n",
+       "\n",
+       "                             scrollPercentageHistory  \\\n",
+       "0                                 50.3, 18.18, 16.46   \n",
+       "1  25.35, 45.66, 35.3, 28.05, 36.53, 47.57, 55.33...   \n",
+       "\n",
+       "                              pageVisitsCountHistory  \\\n",
+       "0                                            2, 1, 1   \n",
+       "1  1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1...   \n",
+       "\n",
+       "                                timestampHistory_new  \n",
+       "0        1657146417045, 1657146605778, 1657146698738  \n",
+       "1  1656684240278, 1656761266729, 1656761528085, 1...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +968,220 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Juntando tabelas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Listar e carregar os arquivos de treino\n",
+    "treino_files = glob.glob('/Users/leticiapires/Desktop/G1Recommender/dados/challenge-webmedia-e-globo-2023/files/treino/treino_parte*.csv')\n",
+    "df_treino = pd.concat([pd.read_csv(f) for f in treino_files], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 577942 entries, 0 to 577941\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column                   Non-Null Count   Dtype \n",
+      "---  ------                   --------------   ----- \n",
+      " 0   userId                   577942 non-null  object\n",
+      " 1   userType                 577942 non-null  object\n",
+      " 2   historySize              577942 non-null  int64 \n",
+      " 3   history                  577942 non-null  object\n",
+      " 4   timestampHistory         577942 non-null  object\n",
+      " 5   numberOfClicksHistory    577942 non-null  object\n",
+      " 6   timeOnPageHistory        577942 non-null  object\n",
+      " 7   scrollPercentageHistory  577942 non-null  object\n",
+      " 8   pageVisitsCountHistory   577942 non-null  object\n",
+      " 9   timestampHistory_new     577942 non-null  object\n",
+      "dtypes: int64(1), object(9)\n",
+      "memory usage: 44.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_treino.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>userType</th>\n",
+       "      <th>historySize</th>\n",
+       "      <th>history</th>\n",
+       "      <th>timestampHistory</th>\n",
+       "      <th>numberOfClicksHistory</th>\n",
+       "      <th>timeOnPageHistory</th>\n",
+       "      <th>scrollPercentageHistory</th>\n",
+       "      <th>pageVisitsCountHistory</th>\n",
+       "      <th>timestampHistory_new</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fbb963d61eb8149e7f43b1bd905457ba5e106a830ddc27...</td>\n",
+       "      <td>Non-Logged</td>\n",
+       "      <td>2</td>\n",
+       "      <td>80aa7bb2-adce-4a55-9711-912c407927a1, d9e5f15d...</td>\n",
+       "      <td>1657908085200, 1659634203762</td>\n",
+       "      <td>0, 0</td>\n",
+       "      <td>71998, 115232</td>\n",
+       "      <td>81.58, 73.36</td>\n",
+       "      <td>1, 1</td>\n",
+       "      <td>1657908085200, 1659634203762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17f1083e6079b0f28f7820a6803583d1c1b405c0718b11...</td>\n",
+       "      <td>Non-Logged</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19ba89fc-1e06-4c5d-9c57-4a3088dc0511, e273dba4...</td>\n",
+       "      <td>1657111508570, 1657481309920</td>\n",
+       "      <td>68, 12</td>\n",
+       "      <td>131495, 43733</td>\n",
+       "      <td>51.74, 35.49</td>\n",
+       "      <td>1, 1</td>\n",
+       "      <td>1657111508570, 1657481309920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>528a8d7a2af73101da8d6709c1ec875b449a5a58749a99...</td>\n",
+       "      <td>Non-Logged</td>\n",
+       "      <td>2</td>\n",
+       "      <td>59a61a8a-cc52-453f-b1cd-2bd019e9d574, a0562805...</td>\n",
+       "      <td>1657823890328, 1660141444328</td>\n",
+       "      <td>55, 9</td>\n",
+       "      <td>159042, 10336</td>\n",
+       "      <td>62.19, 48.28</td>\n",
+       "      <td>1, 1</td>\n",
+       "      <td>1657823890328, 1660141444328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2dd18b58a634a4e77181a202cf152df6169dfb3e4230ef...</td>\n",
+       "      <td>Non-Logged</td>\n",
+       "      <td>2</td>\n",
+       "      <td>233f8238-2ce0-470f-a9d5-0e0ac530382a, 037155f4...</td>\n",
+       "      <td>1656963373076, 1657091888917</td>\n",
+       "      <td>0, 0</td>\n",
+       "      <td>193579, 20519</td>\n",
+       "      <td>31.03, 31.9</td>\n",
+       "      <td>1, 1</td>\n",
+       "      <td>1656963373076, 1657091888917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>97e1439d485b0630e12818d3df84ff67d08475ef6ebeb0...</td>\n",
+       "      <td>Logged</td>\n",
+       "      <td>2</td>\n",
+       "      <td>385044ad-3876-4188-83fa-f560435c1a9c, 2f754502...</td>\n",
+       "      <td>1657618607633, 1659536839832</td>\n",
+       "      <td>57, 38</td>\n",
+       "      <td>220000, 130000</td>\n",
+       "      <td>52.65, 53.37</td>\n",
+       "      <td>1, 1</td>\n",
+       "      <td>1657618607633, 1659536839832</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              userId    userType  historySize  \\\n",
+       "0  fbb963d61eb8149e7f43b1bd905457ba5e106a830ddc27...  Non-Logged            2   \n",
+       "1  17f1083e6079b0f28f7820a6803583d1c1b405c0718b11...  Non-Logged            2   \n",
+       "2  528a8d7a2af73101da8d6709c1ec875b449a5a58749a99...  Non-Logged            2   \n",
+       "3  2dd18b58a634a4e77181a202cf152df6169dfb3e4230ef...  Non-Logged            2   \n",
+       "4  97e1439d485b0630e12818d3df84ff67d08475ef6ebeb0...      Logged            2   \n",
+       "\n",
+       "                                             history  \\\n",
+       "0  80aa7bb2-adce-4a55-9711-912c407927a1, d9e5f15d...   \n",
+       "1  19ba89fc-1e06-4c5d-9c57-4a3088dc0511, e273dba4...   \n",
+       "2  59a61a8a-cc52-453f-b1cd-2bd019e9d574, a0562805...   \n",
+       "3  233f8238-2ce0-470f-a9d5-0e0ac530382a, 037155f4...   \n",
+       "4  385044ad-3876-4188-83fa-f560435c1a9c, 2f754502...   \n",
+       "\n",
+       "               timestampHistory numberOfClicksHistory timeOnPageHistory  \\\n",
+       "0  1657908085200, 1659634203762                  0, 0     71998, 115232   \n",
+       "1  1657111508570, 1657481309920                68, 12     131495, 43733   \n",
+       "2  1657823890328, 1660141444328                 55, 9     159042, 10336   \n",
+       "3  1656963373076, 1657091888917                  0, 0     193579, 20519   \n",
+       "4  1657618607633, 1659536839832                57, 38    220000, 130000   \n",
+       "\n",
+       "  scrollPercentageHistory pageVisitsCountHistory          timestampHistory_new  \n",
+       "0            81.58, 73.36                   1, 1  1657908085200, 1659634203762  \n",
+       "1            51.74, 35.49                   1, 1  1657111508570, 1657481309920  \n",
+       "2            62.19, 48.28                   1, 1  1657823890328, 1660141444328  \n",
+       "3             31.03, 31.9                   1, 1  1656963373076, 1657091888917  \n",
+       "4            52.65, 53.37                   1, 1  1657618607633, 1659536839832  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_treino.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Explodir colunas que contêm listas\n",
+    "df_treino['history'] = df_treino['history'].apply(eval)\n",
+    "df_treino = df_treino.explode('history')\n",
+    "df_treino['numberOfClicksHistory'] = df_treino['numberOfClicksHistory'].apply(eval)\n",
+    "df_treino = df_treino.explode('numberOfClicksHistory')\n",
+    "df_treino['timeOnPageHistory'] = df_treino['timeOnPageHistory'].apply(eval)\n",
+    "df_treino = df_treino.explode('timeOnPageHistory')\n",
+    "df_treino['scrollPercentageHistory'] = df_treino['scrollPercentageHistory'].apply(eval)\n",
+    "df_treino = df_treino.explode('scrollPercentageHistory')\n",
+    "df_treino['pageVisitsCountHistory'] = df_treino['pageVisitsCountHistory'].apply(eval)\n",
+    "df_treino = df_treino.explode('pageVisitsCountHistory')"
+   ]
   }
  ],
  "metadata": {
